src/test/deca/syntax/invalid/personal/print_bad_float.deca
// Description:
//    Programme affichant un flottant non valide
//
//
// Historique:
//    cree le 01/01/2025

{
        println(6.);
}